--- a/package.json
+++ b/package.json
@@ -4,5 +4,19 @@
   "main": "index.js",
   "repository": "git@github.com:crossroadscx/cloud-functions-yarn-example.git",
   "author": "Chris Birk <cmbirk@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "workspaces": {
+    "packages": [
+      "packages/*"
+    ]
+  },
+  "scripts": {
+    "build": "yarn workspaces foreach -vpt run build",
+    "clean": "yarn workspaces foreach -vp run clean",
+    "lint": "yarn workspaces foreach -vp run lint"
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.8",
+    "typescript": "^4.5.4"
+  }
 }
