--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -13,6 +13,13 @@
   "devDependencies": {
     "@crossroadscx/eslint-config-example": "workspace:^",
     "@types/node": "^17.0.8",
+    "@typescript-eslint/eslint-plugin": "^5.9.1",
+    "@typescript-eslint/parser": "^5.9.1",
+    "eslint": "^8.6.0",
+    "eslint-import-resolver-node": "^0.3.6",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
     "ts-node": "^10.4.0",
     "tslib": "^2.3.1",
     "ttypescript": "^1.5.13",
