--- a/packages/cloud-functions/package.json
+++ b/packages/cloud-functions/package.json
@@ -7,9 +7,23 @@
     "lint": "eslint --ext=tsx,ts,js src"
   },
   "dependencies": {
-    "@crossroadscx/utils-example": "workspace:^"
+    "@crossroadscx/utils-example": "workspace:^",
+    "@google-cloud/functions-framework": "^2.1.0"
   },
   "devDependencies": {
-    "@crossroadscx/eslint-config-example": "workspace:^"
+    "@crossroadscx/eslint-config-example": "workspace:^",
+    "@types/node": "^17.0.8",
+    "@typescript-eslint/eslint-plugin": "^5.9.1",
+    "@typescript-eslint/parser": "^5.9.1",
+    "eslint": "^8.6.0",
+    "eslint-import-resolver-node": "^0.3.6",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "ts-node": "^10.4.0",
+    "tslib": "^2.3.1",
+    "ttypescript": "^1.5.13",
+    "typescript": "^4.5.4",
+    "typescript-transform-paths": "^3.3.1"
   }
 }
