--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -12,6 +12,8 @@
       "require": "./dist/cjs/index.js"
     }
   },
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
   "files": [
     "dist"
   ],
