--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
   },
   "devDependencies": {
     "@types/node": "^17.0.8",
+    "eslint": "^8.6.0",
     "typescript": "^4.5.4"
+  },
+  "dependencies": {
+    "@yarnpkg/pnpify": "^3.1.1-rc.10"
   }
 }
